--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "commander": "^13.1.0",
     "express": "^5.1.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.10"
   }
 }
