--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "commander": "^13.1.0",
     "express": "^5.1.0",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
